# autotoolerpp

./: .gitignore  README.md  configure.ac  readme.md
doc/: Gemfile  rspeccpp.md
include/: autotoolerpp.h
src/: .gitignore  Makefile.am  autotoolerpp.cpp  main.cpp
test/: .gitignore  Makefile.am  colortest.h  test_initial.cpp  testutils.cpp  testutils.h
